--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 <body>
 <header>
-    <h1>Heist at Tiffany's</h1>
+    <h1>The Heist at
+    <br>
+    Tiffany's</h1>
 </header>
     <div class="ring"><img src="ring.gif"></div>
     <div class="green"><img src="green.gif"></div>
@@ -20,6 +22,7 @@
     <div class="necklace"><img src="necklace.gif"></div>
     <footer>
         <form action="index2.html" method="get">
+            <h3>Will you win the heist or get caught in the act?</h3>
             <select id="user" name="userName">
                 <option value="Holly Golightly" selected>Holly Golightly</option>
                 <option value="Lula Mae Barnes">Lula Mae Barnes</option>
