--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <footer>
         <form action="index2.html" method="get">
-            <h3>Will you win the heist or get caught in the act?</h3>
+            <h3>Will you pull off the heist or get caught in the act?</h3>
             <select id="user" name="userName">
                 <option value="Holly Golightly" selected>Holly Golightly</option>
                 <option value="Lula Mae Barnes">Lula Mae Barnes</option>
