--- a/index2.html
+++ b/index2.html
@@ -5,11 +5,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title></title>
   <link rel="stylesheet" href="style2.css">
+  <script type ="text/javascript" src ="jquery-3.1.1.min (1).js"></script>
+  <script src="game.js" type="text/javascript"></script>
 </head>
 <body>
-  <form action="http://localhost:3000/showForm" method="post" >
+
+
+<div id="count"></div>
+
+
+<div id='diamond'><img src="diamond.gif"></div>
+
+
+
+<!-- <footer>
+     <form action="http://localhost:3000/showForm" method="post" >
       <h2>You have chosen</h2>
-      <!-- username -->
+      username
       <div class = "item">
         <img src="images/dress.png">
         <label class="label">Character:
@@ -17,5 +29,6 @@
         </label>
         </div>
         </form>
+        </footer> -->
 </body>
 </html>
