--- a/index2.html
+++ b/index2.html
@@ -10,11 +10,14 @@
 </head>
 <body>
 
+<div id='board'>
+
+<div class='diamond'><img src="diamond.gif"></div>
 
 <div id="count"></div>
 
+</div>
 
-<div id='diamond'><img src="diamond.gif"></div>
 
 
 
