--- a/index2.html
+++ b/index2.html
@@ -11,18 +11,18 @@
 <body>
 
 <div id='flex-container'>
-<div class='flex-items'>
+<div class='flex-items tiffany'>
 <div class='diamond'><img src="diamond.gif"></div>
-<div class='diamond 1'><img src="diamond.gif"></div>
-<div class='diamond 2'><img src="diamond.gif"></div>
-<div class='diamond 3'><img src="diamond.gif"></div>
-<div class='diamond 4'><img src="diamond.gif"></div>
-<div class='diamond 5'><img src="diamond.gif"></div>
-<div class='diamond 6'><img src="diamond.gif"></div>
-<div class='diamond 7'><img src="diamond.gif"></div>
-<div class='diamond 8'><img src="diamond.gif"></div>
-<div class='diamond 9'><img src="diamond.gif"></div>
-<div class='diamond 10'><img src="diamond.gif"></div>
+<div class='diamond'><img src="diamond.gif"></div>
+<div class='diamond'><img src="diamond.gif"></div>
+<div class='diamond'><img src="diamond.gif"></div>
+<div class='diamond'><img src="diamond.gif"></div>
+<div class='diamond'><img src="diamond.gif"></div>
+<div class='diamond'><img src="diamond.gif"></div>
+<div class='diamond'><img src="diamond.gif"></div>
+<div class='diamond'><img src="diamond.gif"></div>
+<div class='diamond'><img src="diamond.gif"></div>
+<div class='diamond'><img src="diamond.gif"></div>
 
 </div>
 </div>
