--- a/index2.html
+++ b/index2.html
@@ -27,7 +27,8 @@
 </div>
 </div>
 
-
+<div class="score">Score</div>
+<div class="clock">Clock</div>
 
 
 <!-- <footer>
@@ -35,7 +36,7 @@
       <h2>You have chosen</h2>
       username
       <div class = "item">
-        <img src="images/dress.png">
+
         <label class="label">Character:
           <input id="user-info" type="text" name="userName" value="put user here" />
         </label>
