--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <title></title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=IM+Fell+English:400i" rel="stylesheet">
+
     <script src="landing.js"></script>
 </head>
 
 <body>
 <header>
     <h1>The Heist at
-    <br>
     Tiffany's</h1>
 </header>
     <div class="necklace"><img src="necklace.gif"></div>
@@ -30,7 +31,7 @@
                 <option value="Fred">Fred</option>
             </select>
             <br>
-            <button type="Click to Enter" class="order">Choose and Enter the Heist</button>
+            <button type="Click to Enter" class="order"><img src="diamond.gif"></button>
         </form>
     </footer>
 </body>
