--- a/index2.html
+++ b/index2.html
@@ -12,17 +12,17 @@
 
 <div id='flex-container'>
 <div class='flex-items tiffany'>
+<div class='diamond1'><img src="diamond.gif"></div>
+<div class='diamond2'><img src="diamond.gif"></div>
+<div class='diamond3'><img src="diamond.gif"></div>
 <div class='diamond'><img src="diamond.gif"></div>
 <div class='diamond'><img src="diamond.gif"></div>
 <div class='diamond'><img src="diamond.gif"></div>
-<div class='diamond'><img src="diamond.gif"></div>
-<div class='diamond'><img src="diamond.gif"></div>
-<div class='diamond'><img src="diamond.gif"></div>
-<div class='diamond'><img src="diamond.gif"></div>
-<div class='diamond'><img src="diamond.gif"></div>
-<div class='diamond'><img src="diamond.gif"></div>
-<div class='diamond'><img src="diamond.gif"></div>
-<div class='diamond'><img src="diamond.gif"></div>
+<div class='diamond'><img src="diamond.gif" class='diamante'></div>
+<div class='diamond'><img src="diamond.gif" class='diamante'></div>
+<div class='diamond'><img src="diamond.gif" class='diamante'></div>
+<div class='diamond'><img src="diamond.gif" class='diamante'></div>
+<div class='diamond'><img src="diamond.gif" class='diamante'></div>
 
 </div>
 </div>
