--- a/index2.html
+++ b/index2.html
@@ -12,24 +12,26 @@
 
 <div id='flex-container'>
 <div class='flex-items tiffany'>
-<div class='diamond1'><img src="diamond.gif"></div>
-<div class='diamond2'><img src="diamond.gif"></div>
-<div class='diamond3'><img src="diamond.gif"></div>
-<div class='diamond'><img src="diamond.gif"></div>
-<div class='diamond'><img src="diamond.gif"></div>
-<div class='diamond'><img src="diamond.gif"></div>
-<div class='diamond'><img src="diamond.gif" class='diamante'></div>
-<div class='diamond'><img src="diamond.gif" class='diamante'></div>
-<div class='diamond'><img src="diamond.gif" class='diamante'></div>
-<div class='diamond'><img src="diamond.gif" class='diamante'></div>
-<div class='diamond'><img src="diamond.gif" class='diamante'></div>
+<div class='diamond'><img src="diamond.gif" class='dia'></div>
+<div class='diamond1'><img src="diamond.gif" class='dia'></div>
+<div class='diamond'><img src="diamond.gif" class='dia'></div>
+<div class='diamond'><img src="diamond.gif" class='dia'></div>
+<div class='diamond'><img src="diamond.gif" class='dia'></div>
+<div class='diamond'><img src="diamond.gif" class='dia'></div>
+<div class='diamond'><img src="diamond.gif" class='dia'></div>
+<div class='diamond'><img src="diamond.gif" class='dia'></div>
+<div class='diamond'><img src="diamond.gif" class='dia'></div>
+<div class='diamond'><img src="diamond.gif" class='dia'></div>
+<div class='diamond'><img src="diamond.gif" class='dia'></div>
 
 </div>
 </div>
 
-<div class="score">Score</div>
-<div class="clock">Clock</div>
-
+<section>
+<div id="score">Score<span></span></div>
+<div id="clock">Clock<span></span></div>
+<div id="endgame"></div>
+</section>
 
 <!-- <footer>
      <form action="http://localhost:3000/showForm" method="post" >
