--- a/index2.html
+++ b/index2.html
@@ -30,7 +30,7 @@
 <section>
 <div id="score">Score<span></span></div>
 <div id="clock">Clock<span></span></div>
-<div id="endgame"></div>
+<div id="endgame">You Won</div>
 </section>
 
 <!-- <footer>
