--- a/index2.html
+++ b/index2.html
@@ -28,9 +28,10 @@
 </div>
 
 <section>
-<div id="score">Score<span></span></div>
-<div id="clock">Clock<span></span></div>
-<div id="endgame">You Won</div>
+<div id="score">Score</div>
+<div id="clock">Clock</div>
+<!-- <div id="endgame">Click on the diamond within 10 seconds or game over</div> -->
+<!-- <div id="endscore"></div> -->
 </section>
 
 <!-- <footer>
